RESOLVED FIXED296096
Many PDF tests time out sporadically as a result of the PDF not loading
https://bugs.webkit.org/show_bug.cgi?id=296096
Summary Many PDF tests time out sporadically as a result of the PDF not loading
Bryan Medina
Reported 2025-07-16 16:07:36 PDT
pdf/annotations/radio-buttons-select-second.html is a flakey timeout occurring on macOS wk2 Debug arm64. HISTORY: https://results.webkit.org/?suite=layout-tests&test=pdf%2Fannotations%2Fradio-buttons-select-second.html TEST RUN: 07:15:15.945 810 [74931/84177] pdf/annotations/radio-buttons-select-second.html failed unexpectedly (test timed out) 07:15:21.035 810 worker/11 pdf/annotations/radio-buttons-select-second.html failed: 07:15:21.035 810 worker/11 test timed out07:33:33.057 810 pdf/annotations/radio-buttons-select-second.html took 61.5 seconds This test did not reproduce a diff after timeout.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-07-16 16:16:47 PDT
EWS
Comment 2 2025-07-16 17:57:31 PDT
Test gardening commit 297502@main (56d40bfafe94): <https://commits.webkit.org/297502@main> Reviewed commits have been landed. Closing PR #48163 and removing active labels.
Tim Horton
Comment 3 2025-10-10 17:52:14 PDT
*** Bug 296070 has been marked as a duplicate of this bug. ***
Tim Horton
Comment 4 2025-10-10 17:52:17 PDT
*** Bug 293804 has been marked as a duplicate of this bug. ***
Tim Horton
Comment 5 2025-10-10 17:52:19 PDT
*** Bug 287877 has been marked as a duplicate of this bug. ***
Tim Horton
Comment 6 2025-10-10 18:01:31 PDT
EWS
Comment 7 2025-10-10 21:27:55 PDT
Committed 301346@main (2ed6bef9617d): <https://commits.webkit.org/301346@main> Reviewed commits have been landed. Closing PR #52154 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.